--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/bubble.css">
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/bubble.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 
@@ -28,12 +28,12 @@
 
 
     <section>
-        <img src="../assets/img/stars.png" id="stars">
-        <img src="../assets/img/layer 3.png" id="layer_3">
-        <img src="../assets/img/layer 2.png" id="layer_2">
-        <img src="../assets/img/laptop.png" id="laptop">
+        <img src="assets/img/stars.png" id="stars">
+        <img src="assets/img/layer 3.png" id="layer_3">
+        <img src="assets/img/layer 2.png" id="layer_2">
+        <img src="assets/img/laptop.png" id="laptop">
         <!-- <h2 id="text">hello world</h2> -->
-        <img src="../assets/img/layer 1.png" id="layer_1">  
+        <img src="assets/img/layer 1.png" id="layer_1">  
         <a href="#sec" id="btn">Explore</a>
     </section>
 
@@ -59,11 +59,11 @@
         <div class="animate-me">
             <div class="grid-photos">
                 <div></div>
-                <div class="grid-item"><img src="../assets/img/yasser.png" alt="" ><h1>Dr. Yasser fadlallah</h1></div>
-                <!-- <div class="grid-item"><img src="../assets/img/ahmad.png" alt="" ><h1>Dr. Ahmad fadlallah</h1></div> -->
-                <div class="grid-item"><img src="../assets/img/mj.png" alt="" ><h1>Mohammad jawad</h1></div>
+                <div class="grid-item"><img src="assets/img/yasser.png" alt="" ><h1>Dr. Yasser fadlallah</h1></div>
+                <!-- <div class="grid-item"><img src="assets/img/ahmad.png" alt="" ><h1>Dr. Ahmad fadlallah</h1></div> -->
+                <div class="grid-item"><img src="assets/img/mj.png" alt="" ><h1>Mohammad jawad</h1></div>
                 <div></div>
-                <!-- <div class="grid-item"><img src="../assets/img/fatima.png" alt="" ><h1>Fatima Mubarak</h1></div> -->
+                <!-- <div class="grid-item"><img src="assets/img/fatima.png" alt="" ><h1>Fatima Mubarak</h1></div> -->
             </div>
         </div>
 
@@ -94,14 +94,14 @@
         </div>
 
         <div class="footer-data"> 
-            <a href="https://www.usal.edu.lb" target="_blank"><img src="../assets/img/logo-usal.png"  style="width: 8%;position: absolute;right: 5%;margin-top: 6px;" ></a>
+            <a href="https://www.usal.edu.lb" target="_blank"><img src="assets/img/logo-usal.png"  style="width: 8%;position: absolute;right: 5%;margin-top: 6px;" ></a>
         </div>
         
     </div>
 
 
-<script src="../assets/js/login.js"></script>
- <script src="../assets/js/main.js"></script>
+<script src="assets/js/login.js"></script>
+ <script src="assets/js/main.js"></script>
  
 </body>
 </html>
