--- a/main.html
+++ b/main.html
@@ -17,9 +17,7 @@
     <header>
         <h1 id="bubble-hover" ></h1>
         <ul>
-            <!-- <li><a href="main.html" class="active">Home</a></li> -->
-            <li><a href="login.html">Login</a></li>
-            <li><a href="signup.html">Register</a></li>
+            <li><a href="#">Logout</a></li>
         </ul>
         
     </header>
@@ -55,21 +53,7 @@
         </div>
 
 
-        <h2>Founders</h2>
-
-        <div class="animate-me">
-            <div class="grid-photos">
-                <div></div>
-                <div class="grid-item"><img src="assets/img/yasser.png" alt="" ><h1>Dr. Yasser fadlallah</h1></div>
-                <!-- <div class="grid-item"><img src="assets/img/ahmad.png" alt="" ><h1>Dr. Ahmad fadlallah</h1></div> -->
-                <div class="grid-item"><img src="assets/img/mj.png" alt="" ><h1>Mohammad jawad</h1></div>
-                <div></div>
-                <!-- <div class="grid-item"><img src="assets/img/fatima.png" alt="" ><h1>Fatima Mubarak</h1></div> -->
-            </div>
-        </div>
-
-
-        <h2>Goals</h2>
+       
 
         <div class="animate-me">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus similique modi unde quaerat vel aut, doloremque explicabo consequuntur eaque sit ut dignissimos adipisci fugit earum voluptatem quis amet aperiam quasi.
